# RayTracing

./: CMakeLists.txt  Ray.h
include/: Camera.h  ColorDBL.h  Def.h  Functions.h  Image.h  Pixel.h  Polygon.h  Ray.h  Rectangle.h  Scene.h  Shape.h  Sphere.h  Surface.h  Triangle.h
src/: Camera.cpp  ColorDBL.cpp  Pixel.cpp  Ray.cpp  Rectangle.cpp  Scene.cpp  Shape.cpp  Sphere.cpp  Triangle.cpp  main.cpp
